# mmtf-cpp

./: README.md  all_cmake_includes.hpp  all_includes.hpp  config_file.config  make_bindings  make_bindings_via_cmake.py  mmtf.cpp
binder/: mmtf.sources
binder/std/: basic_ios_tcc.cpp  exception.cpp  fstream_tcc.cpp  fstream_tcc_1.cpp  ios_base.cpp  istream_tcc.cpp  locale_classes.cpp  sstream_tcc.cpp  stl_vector.cpp  stl_vector_1.cpp  stl_vector_2.cpp  stl_vector_3.cpp  stl_vector_4.cpp  stl_vector_5.cpp  stl_vector_6.cpp
binder/unknown/: unknown.cpp  unknown_1.cpp  unknown_10.cpp  unknown_11.cpp  unknown_12.cpp  unknown_2.cpp  unknown_3.cpp  unknown_4.cpp  unknown_5.cpp  unknown_6.cpp  unknown_7.cpp  unknown_8.cpp  unknown_9.cpp
cmake_bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  mmtf.cpp  mmtf.modules  mmtf.sources  rules.ninja
cmake_bindings/mmtf/: binary_decoder.cpp  binary_decoder_1.cpp  binary_encoder.cpp  binary_encoder_1.cpp  decoder.cpp  errors.cpp  map_decoder.cpp  structure_data.cpp  structure_data_1.cpp  structure_data_2.cpp
cmake_bindings/std/: basic_ios_tcc.cpp  exception.cpp  fstream_tcc.cpp  fstream_tcc_1.cpp  istream_tcc.cpp  locale_classes.cpp  sstream_tcc.cpp  stdexcept.cpp  stl_vector.cpp
include/: mmtf.hpp
include/mmtf/: binary_decoder.hpp  binary_encoder.hpp  encoder.hpp  map_decoder.hpp  msgpack_decoder.hpp  structure_data.hpp
sd_test/: compile_and_run  test.cpp  test2.cpp
tests/: mmtf_tests.cpp
